# leviathan

./: README.md  RESULT.md  pyproject.toml
paper/: convergence_law.tex  proposal.tex  theory.tex
scripts/: audit_cold_spot.py  audit_connectivity.py  audit_early_mass.py  audit_euclid_connectivity.py  audit_euclid_redshifts.py  audit_euclid_tile.py  audit_mega_walls.py  audit_percolation.py  derive_boltzmann_scaling.py  derive_variance_scaling.py  falsify_hemispheres.py  fig_leviathan_summary.py  find_euclid_L3_redshifts.py  find_euclid_redshifts.py  generate_grand_unification.py  generate_scaling_law.py  generate_scaling_law_boxes.py  ingest_euclid_q1.py  test_entropy_decay.py
src/leviathan/: config.py  ingestion.py
src/leviathan/engines/: chronometry.py  topology.py  voids.py
src/leviathan/validation/: nulling.py
